testsuite/tests/linear/should_fail/LinearLazyPat.stderr

LinearLazyPat.hs:5:3: error:
    • Lazy patterns are only allowed at multiplicity Omega
    • In the pattern: ~(x, y)
      In an equation for ‘f’: f ~(x, y) = (y, x)
